--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,3 @@
-asgiref==3.6.0
-certifi==2022.12.7
-charset-normalizer==3.0.1
 Django==4.1.5
-docopt==0.6.2
-gunicorn==20.1.0
-idna==3.4
-pipreqs==0.4.11
-postgres==4.0
-psycopg2==2.9.5
-psycopg2-binary==2.9.5
-psycopg2-pool==1.1
-requests==2.28.2
-sqlparse==0.4.3
-urllib3==1.26.14
-yarg==0.1.9
+django_environ==0.9.0
+environ==1.0
