--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,82 @@
+alembic==1.5.4
 asgiref==3.6.0
+attrs==22.1.0
+autopep8==1.5.5
+blinker==1.4
+CacheControl==0.12.11
 certifi==2022.12.7
+cffi==1.15.1
+chardet==4.0.0
 charset-normalizer==3.0.1
+cleo==2.0.1
+click==7.1.2
+coverage==6.5.0
+crashtest==0.4.1
+distlib==0.3.6
 Django==4.1.5
+django-cors-headers==3.13.0
+django-environ==0.9.0
+djangorestframework==3.14.0
 docopt==0.6.2
+dulwich==0.20.50
+environ==1.0
+filelock==3.9.0
 gunicorn==20.1.0
+html5lib==1.1
 idna==3.4
+importlib-metadata==6.0.0
+iniconfig==1.1.1
+itsdangerous==1.1.0
+jaraco.classes==3.2.3
+Jinja2==2.11.3
+jsonschema==4.17.3
+keyring==23.13.1
+lockfile==0.12.2
+Mako==1.1.4
+MarkupSafe==1.1.1
+more-itertools==9.0.0
+msgpack==1.0.4
+packaging==21.3
+pexpect==4.8.0
+Pillow==9.4.0
 pipreqs==0.4.11
+pkginfo==1.9.6
+platformdirs==2.6.2
+pluggy==1.0.0
+poetry==1.3.2
+poetry-core==1.4.0
+poetry-plugin-export==1.2.0
 postgres==4.0
 psycopg2==2.9.5
 psycopg2-binary==2.9.5
 psycopg2-pool==1.1
+ptyprocess==0.7.0
+py==1.11.0
+pycodestyle==2.6.0
+pycparser==2.21
+pyparsing==3.0.9
+pyrsistent==0.19.3
+pytest==7.1.1
+pytest-cov==2.12.1
+python-dateutil==2.8.1
+python-dotenv==0.15.0
+python-editor==1.0.4
+pytz==2022.7.1
+rapidfuzz==2.13.7
 requests==2.28.2
+requests-toolbelt==0.10.1
+shellingham==1.5.0.post1
+six==1.15.0
+SQLAlchemy==1.3.23
 sqlparse==0.4.3
+toml==0.10.2
+tomli==2.0.1
+tomlkit==0.11.6
+trove-classifiers==2023.1.20
 urllib3==1.26.14
+virtualenv==20.17.1
+webencodings==0.5.1
+Werkzeug==1.0.1
+xattr==0.10.1
 yarg==0.1.9
+zipp==3.11.0
